Fix on mobile breakpoint

--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -3,6 +3,11 @@
 * Breakpoints are inspired by https://github.com/WordPress/gutenberg/blob/trunk/packages/components/src/utils/breakpoint-values.js
 */
 
-$large: 960px;
-$medium: 782px; /* Tablet */
-$mobile: 480px; /* Mobile */
+$huge: 1440px;
+$wide: 1280px;
+$x-large: 1080px;
+$large: 960px; // admin sidebar auto folds // Desktop
+$medium: 782px; // Adminbar goes big. // Tablet
+// $small: 600px;
+$mobile: 480px;
+// $zoomed-in: 280px;
