--- a/src/scss/utilities/on-mobile.scss
+++ b/src/scss/utilities/on-mobile.scss
@@ -4,7 +4,7 @@
 
 @use "./variables" as *;
 
-@media (max-width: $mobile) {
+@media screen and (max-width: $medium){
 	.on-mobile-left {
 		justify-content: flex-start !important;
 		text-align: left;
@@ -18,4 +18,9 @@
 		justify-content: center !important;
 		text-align: center;
 	}
+
+	.on-mobile-reverse-order {
+		flex-direction: column-reverse;
+	}
 }
+
